    handle all the same way
  * Handle INI format
  * Handle DABSIC format
  * Add bunny_read_ini and bunny_write_ini to read and write from and to memory instead of file
  * Add bunny_ini_field_count
  * Deprecate bunny_ini module, use bunny_configuration instead now
  * Add network related events
  * Down the screen resfresh rate if the main loop is too slow.
  * Reorganize privates header.

  * Add a security module to cipher configuration file, assets and saved games.
    **Only for low security needs*
  * Add a hash module
  * Add a bunny_load_file and bunny_save_file
  * Add bunny_thread_push to push a single task into a bunny threadpool
  * Add a stack, queue, list, vector, map, bitfield module
  * Add a pool module for fast memory alloc and free
  * Add a stack on stack module (Container that act as stack, with all its alloc on the real stack)
  * Add bunny_evaluate to compute mathematic operations. Supported operators
    are +-*/%<><=>= == != () and ?:. Currently, variable environment is ignored.
  * Add a collision module that includes triangle collision
  * Add a bunny_unix module
  * Add ANTIALIASING flag for window style
  * Edit LAPIN_ALLOCATOR_DEACTIVATED so it can be used while compiling the library
  * Add BUNNY_ALLOCATOR_* as alias of LAPIN_ALLOCATOR_* macros

  * Add the geosquare demo.

 -- Jason Brillante <damdoshi@hotmail.com>  Tue, 23 May 2017 12:00:00 +0100

liblapin-dev (1.10) stable; urgency=low

  * Remove basic.h, advanced.h and extra.h to organize functions around modules instead.
  * Fully documented with Doxygen.
  * New Makefile
  * Simple project template

 -- Jason Brillante <damdoshi@hotmail.com>  Wed, 10 Aug 2016 00:00:00 +0100

liblapin-dev (1.9) stable; urgency=low

  * Add lapin/extra.h and lapin/extra_type.h
  * Add bunny_server_ and bunny_client_ for network programming
  * Add bunny_thread for parrallel programming
  * Add bunny_hardware, driver for PVM110N by Velleman. (Activate with BUNNY_HARDWARE, need libusb)