@@ -99,6 +99,13 @@ t_bunny_window			*bunny_start_style(unsigned int			wid,
 						   const char			*nam);
 
 /*!
+** bunny_get_fullscreen_modes return an array of valid full screen modes.
+** The array is terminated by a pair of 0.
+** \return An array of t_bunny_position terminated by a 0 structure.
+*/
+const t_bunny_position		*bunny_get_fullscreen_modes(void);
+
+/*!
 ** The bunny_set_key_repeat function activate or deactivate the key repetition
 ** when someone is holding a key pressed down. The repetition is useful in software
 ** where typing text is needed. In video game, it should be disabled.
